--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>React Tutorials</title>
-    <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+  <head>   
+    <title>Instagram</title>   
+     <h1>Instagram</h1>     
   </head>
 
   <body>
